--- a/src/app/component/delete-modal/delete-modal.component.html
+++ b/src/app/component/delete-modal/delete-modal.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Are you sure you want to delete this Role?</h1>
+<h1 mat-dialog-title>Are you sure you want to delete this {{entity}}?</h1>
 <mat-dialog-content>
-  {{role.roleName}}
+  {{message}}
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button type="submit" [mat-dialog-close]="true">Yes</button>
