--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,18 +1,21 @@
-<div class="login">
-<mat-card class="example-card">
-	<h3>Login</h3>
-<form [formGroup]="firstFormGroup" (ngSubmit)="login()">
-         <div class="row">
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Email ID" formControlName="emailId" required>
-          </mat-form-field>
-          </div>
-          <div class="row">
-          <mat-form-field class="full-width">
-            <input type="password" matInput placeholder="Password" formControlName="password" required>
-          </mat-form-field>
-          </div>
-<button mat-raised-button color="primary" class="b">Login</button>
-</form>
-</mat-card>
+<div class="login-main">
+  <mat-card class="example-card">
+    <h3>Login</h3>
+    <form [formGroup]="firstFormGroup" (ngSubmit)="login()">
+      <div class="row">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Email ID" formControlName="emailId" required>
+        </mat-form-field>
+      </div>
+      <div class="row">
+        <mat-form-field class="full-width">
+          <input type="password" matInput placeholder="Password" formControlName="password" required>
+        </mat-form-field>
+      </div>
+      <span class="error-message" *ngIf="errorLoggingIn">Invalid Username or Password</span>
+      <div class="login">
+        <button mat-raised-button color="primary" class="b">Login</button>
+      </div>
+    </form>
+  </mat-card>
 </div>
