--- a/src/app/component/userprofile/userprofile.component.css
+++ b/src/app/component/userprofile/userprofile.component.css
@@ -1,40 +1,17 @@
-<<<<<<< HEAD
-.full-width{
-=======
 .full-width {
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
   width: 40%;
   margin-right: 3%;
 }
 
-<<<<<<< HEAD
-.full-width-oneline{
-  width: 30%;
-} 
-=======
 .full-width-oneline {
   width: 30%;
 }
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
 
 .half-width {
   width: 20%;
 }
-<<<<<<< HEAD
-  
-.center{
-  text-align: center;
-}
-
-.main{
-=======
-
-.center {
-  text-align: center;
-}
 
 .main {
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
   padding-top: 60px;
 }
 
@@ -47,31 +24,6 @@
   font-family: "Times New Roman", Times, serif;
 }
 
-<<<<<<< HEAD
-input{
-  background-color: white;
-  margin-right: 3%;
-}
-table{
-  width: 100%;
-  margin:auto;
-}
-tr{
-  width:90%;
-  background-color: white;
-  border-bottom:0.7px solid silver;
-}
-td{
-  background-color: white;
-  
-}
-
-.view{
-  width:50%;
-  margin:auto;
-}
-
-=======
 input {
   background-color: white;
   margin-right: 3%;
@@ -96,4 +48,11 @@ td {
   width: 50%;
   margin: auto;
 }
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
+
+.center{
+text-align: center;
+}
+
+.one {
+border-right:0.5px solid rgb(114, 111, 111);
+}
