--- a/src/app/component/userprofile/userprofile.component.html
+++ b/src/app/component/userprofile/userprofile.component.html
@@ -1,168 +1,5 @@
-<div style="margin-top:15%;">
-<h3>Assigned Roles</h3>
-<mat-list *ngFor="let role of presentRoles">
-<mat-list-item style="text-align:center;" (click)="revokeRoleToUser(user.userId,role)">{{role.roleName}}&nbsp;<button mat-mini-fab>-</button></mat-list-item>
-</mat-list>
-<h3>Available Roles</h3>
-<mat-list *ngFor="let availableRole of availableRoles">
-<mat-list-item (click)="grantRoleToUser(user.userId,availableRole)">{{availableRole.roleName}}&nbsp;<button mat-mini-fab>+</button></mat-list-item>
-</mat-list>
-</div> 
-
-
-
 <div class="main">
   <mat-card class="view" *ngIf="!isUpdate">
-<<<<<<< HEAD
-    <div class="center" >
-      <h3 class="center">
-        <b> USER PROFILE </b>
-      </h3><br>
-
-      <table>
-        <tr>
-          <td style="width:5%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">account_circle</i>
-          </td>
-          <td style="width:35%;text-align:left">
-            <i style="font-size:14px;color:grey">First Name</i>
-            <h6>
-              <b>{{user.firstName}}</b>
-            </h6>
-          </td>
-          <td style="width:40%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">account_circle</i>
-          </td>
-          <td style="width:5%;text-align:left">
-            <i style="font-size:14px;color:grey">Last Name</i>
-            <h6>
-              <b>{{user.lastName}}</b>
-            </h6>
-          </td>
-        </tr>
-
-        <tr>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">insert_emoticon</i>
-          </td>
-          <td style="width:35%;text-align:left">
-            <i style="font-size:14px;color:grey">Gender</i>
-           <h6>
-              <b>{{user.gender}}</b>
-            </h6>
-          </td>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">call</i>
-          </td>
-          <td style="width:35%;text-align:left">
-            <i style="font-size:14px;color:grey">Phone Number</i>
-            <h6>
-              <b>{{user.phoneNumber}}</b>
-            </h6>
-          </td>
-        </tr>
-
-        <tr>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">location_city</i>
-          </td>
-          <td style="width:35%;text-align:left">
-            <i style="font-size:14px;color:grey">Door Number</i>
-            <h6>
-              <b>{{address.doorNumber}}</b>
-            </h6>
-          </td>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">time_to_leave</i>
-          </td>
-          <td style="width:35%;text-align:left">
-            <i style="font-size:14px;color:grey">street Name</i>
-            <h6>
-              <b>{{address.streetName}}</b>
-            </h6>
-          </td>
-        </tr>
-
-        <tr>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
-          </td>
-          <td style="width:35%;text-align:left">
-            <i style="font-size:14px;color:grey">Area</i>
-            <h6>
-              <b>{{address.area}}</b>
-            </h6>
-          </td>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
-          </td>
-          <td style="width:35%;text-align:left">
-            <i style="font-size:14px;color:grey">city</i>
-            <h6>
-              <b>{{address.city}}</b>
-            </h6>
-          </td>
-        </tr>
-
-        <tr>
-          <td style="width:10%;text-align:right">
-           <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
-          </td>
-          <td style="width:25%;text-align:left">
-            <i style="font-size:14px;color:grey">state</i>
-            <h6>
-              <b>{{address.state}}</b>
-            </h6>
-          </td>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
-          </td>
-          <td style="width:25%;text-align:left">
-            <i style="font-size:14px;color:grey">country</i>
-            <h6>
-              <b>{{address.country}}</b>
-            </h6>
-          </td>
-        </tr>
-        <tr>
-          <td style="width:10%;text-align:right">
-            <i class="large material-icons md-18" style="font-size:35px">fiber_pin</i>
-          </td>
-          <td style="width:25%;text-align:left">
-            <i style="font-size:14px;color:grey">country</i>
-            <h6>
-              <b>{{address.zipcode}}</b>
-            </h6>
-          </td>
-        </tr>
-        <tr>
-          <td style="width:10%;"></td>
-          <td style="width:35%;"></td>
-          <td style="width:10%;"></td>
-          <td>
-              <div style="text-align:left">
-                <button mat-raised-button color="primary" (click)="updateToggle()">
-                  <i class="material-icons small">create</i> UPDATE USER DETAILS</button>
-              </div>
-          </td>
-        </tr>
-      </table>
-      
-    </div>
-  </mat-card>
-
-  <!-- 
-      <div class="row">
-        <i class="material-icons prefix">insert_emoticon</i>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Gender" value={{user.gender}} readonly>
-        </mat-form-field>
-        <i class="material-icons prefix">call</i>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Phone Number" value={{user.phoneNumber}} readonly>
-        </mat-form-field>
-      </div>
-=======
     <div class="center">
       <h3 class="center">
         <b> USER PROFILE </b>
@@ -190,7 +27,6 @@
             </h6>
           </td>
         </tr>
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
 
         <tr>
           <td style="width:10%;text-align:right">
@@ -242,7 +78,7 @@
             <i style="font-size:14px;color:grey">Area</i>
             <h6>
               <b>{{address.area | titlecase}}</b>
-            </h6>
+           </h6>
           </td>
           <td style="width:10%;text-align:right">
             <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
@@ -300,22 +136,15 @@
       </table>
 
     </div>
-    </mat-card> -->
+  </mat-card>
 
-  <mat-card>
-    <div class="center" *ngIf="isUpdate">
-<<<<<<< HEAD
-        <h3 class="center">
-            <b> USER PROFILE UPDATE </b>
-          </h3><br>
-    
-=======
+  <mat-card *ngIf="isUpdate">
+    <div class="center">
       <h3 class="center">
         <b> USER PROFILE UPDATE </b>
       </h3>
       <br>
 
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
       <form name="myForm" #validateForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
         <div>
           <i class="material-icons prefix">account_circle</i>
@@ -365,11 +194,7 @@
             <span class="font" *ngIf="!door">door number cannot be null</span>
           </mat-form-field>
         </div>
-<<<<<<< HEAD
-        <!-- 
-=======
         <!--
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
         </div>
         <div> -->
         <div>
@@ -410,11 +235,7 @@
             <span class="font" *ngIf="!state1">invalid state</span>
           </mat-form-field>
         </div>
-<<<<<<< HEAD
-        <!-- 
-=======
         <!--
->>>>>>> cad91c83a99010837a34ea81190f185ccbcc176a
         </div>
         <div> -->
         <div>
@@ -429,7 +250,7 @@
         <div> -->
           <i class="material-icons prefix">fiber_pin</i>
           <mat-form-field class="full-width">
-           <input #zipCode (keyup)="validateZipCode(zipCode.value)" matInput placeholder="Zip Code" [(ngModel)]="address.zipcode" name="address.zipcode"
+            <input #zipCode (keyup)="validateZipCode(zipCode.value)" matInput placeholder="Zip Code" [(ngModel)]="address.zipcode" name="address.zipcode"
               [ngModelOptions]="{standalone: true}" #zipcode="ngModel" minlength="6" maxlength="6" required>
             <span class="font" *ngIf="!zip">Please input a valid ZipCode</span>
           </mat-form-field>
@@ -451,4 +272,33 @@
     </div>
   </mat-card>
 </div>
+
+<mat-card style="width:60%;margin:3% auto;">
+  <mat-grid-list cols="2" rowHeight="2:1">
+    <mat-grid-tile class="one">
+      <span class="center">
+        <h4>Assigned Roles</h4>
+        <mat-list *ngFor="let role of presentRoles">
+          <mat-list-item class="center" (click)="revokeRoleToUser(user.id, role)">{{role.roleName}}
+            <button style="margin:1px;" mat-mini-fab>-</button>
+          </mat-list-item>
+        </mat-list>
+      </span>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <span class="center">
+        <h4>Available Roles</h4>
+        <mat-list *ngFor="let role of availableRoles">
+          <mat-list-item (click)="grantRoleToUser(user.id, role)">{{role.roleName}}
+            <button style="margin:1px;" mat-mini-fab>+</button>
+          </mat-list-item>
+        </mat-list>
+      </span>
+    </mat-grid-tile>
+  </mat-grid-list>
+</mat-card> 
+
+
+
+
 
