last minute changes

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,18 +1,7 @@
-<!-- <app-footer _nghost-c13=""><footer _ngcontent-c13="" class="docs-footer">
-  <div _ngcontent-c13="" class="docs-footer-list">
-    <div _ngcontent-c13="" class="footer-logo">
-      <img _ngcontent-c13="" alt="angular" class="docs-footer-angular-logo" src="../../../assets/img/homepage/angular-white-transparent.svg">
+<footer style="bottom:1%;position:relative;width:100%;z-index: 1; margin-top: 3%;">
+  <mat-card>
+    <div class = "copyright" style="text-align: center;">
+       &copy; All Rights Reserved. Training Manager Corp.
     </div>
-
-    <div _ngcontent-c13="" class="docs-footer-links">
-      <ul _ngcontent-c13="">
-        <li _ngcontent-c13=""> <a _ngcontent-c13="" href="https://angular.io">Learn Angular</a> </li>
-      </ul>
-    </div>
-
-    <div _ngcontent-c13="" class="docs-footer-copyright">
-      <p _ngcontent-c13="">Powered by Google ©2010-2017. Code licensed under an MIT-style License. Documentation licensed under CC BY 4.0.</p>
-    </div>
-  </div>
+  </mat-card>
 </footer>
-</app-footer> -->
