--- a/src/app/component/tabs/tabs.component.html
+++ b/src/app/component/tabs/tabs.component.html
@@ -1,3 +1,5 @@
+tabs.html
+<div *ngIf="isLoggedIn">
 <nav mat-tab-nav-bar>
 
 <span *ngIf="deptFlag">
@@ -13,4 +15,4 @@
 </span>
 <!-- <h6 style="text-align:right;color:crimson">Hi {{firstName}}</h6> -->
 </nav>
-<router-outlet></router-outlet>
+</div> 
