--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -57,7 +57,7 @@
 			<mat-grid-tile *ngFor = "let user of pagedUser">
 				<mat-card class="example-card">
 		  			<mat-card-header>
-					    <div mat-card-avatar class="example-header-image"></div>
+					    <div mat-card-avatar><i class="material-icons prefix">perm_identity</i></div> 
 					    <mat-card-title>{{user.firstName | uppercase}} {{user.lastName | uppercase}}</mat-card-title>
 					    <mat-card-subtitle>{{user.emailId}}</mat-card-subtitle>
 					 </mat-card-header>
